--- a/study_2/style.css
+++ b/study_2/style.css
@@ -2,11 +2,12 @@
     box-sizing: border-box;
     margin: 0;
 }
+
 /* ----- 배경 ----- */
 .container {
     width: 100vw;
     height: 100vh;
-    background-color: rgb(238, 238, 255);
+    background-color: rgb(247, 247, 255);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -18,6 +19,7 @@
     height: 500px;
     background-color: white;
     border-radius: 15px;
+    border: 10px solid rgb(186, 186, 229);
     padding: 20px;
 }
 
@@ -26,13 +28,15 @@
     width: 100%;
     height: 18%;
     padding: 0px 20px 0px 20px;
-    background-color:rgb(238, 238, 255);
+    background-color: rgb(238, 238, 255);
     border-radius: 10px;
+    border: 3px solid rgb(186, 186, 229);
     margin-bottom: 13px;
     display: flex;
     align-items: center;
     justify-content: end;
 }
+
 .calculator .display p {
     font-size: 30px;
 }
@@ -42,19 +46,21 @@
     width: 100%;
     height: 80%;
     display: grid;
+    /* 행(row, 가로), 열(column, 세로)) */
     /* 열 4개, 1:1:1:1 비율 */
-    /* 한 줄에 4개의 칸을 만듦 */
     grid-template-columns: repeat(4, 1fr);
 }
+
 .button-grid button {
     margin: 2px;
     border-radius: 10px;
     background-color: rgb(238, 238, 255);
     border-style: none;
-    border: 3px solid rgb(186, 186, 229);
+    border: 2px solid rgb(186, 186, 229);
     font-size: 19px;
     cursor: pointer;
 }
+
 .button-grid .button-zero {
     /* 버튼 0은 열 2개를 합쳐서 다른 버튼보다 가로너비가 2배이다 */
     /* span 2 는 "현재위치부터 오른쪽으로 2칸 차지" */
