--- a/study_3/style.css
+++ b/study_3/style.css
@@ -16,7 +16,12 @@
     background-color: rgb(255, 255, 255);
     flex-direction: row;
 }
-
+.phone-container {
+    width: 400px;
+    height: 750px;
+    position: relative;
+    /* background-color: blue; */
+}
 /* ---------- 휴대폰 홈화면---------- */
 .container .phone {
     width: 340px;
@@ -26,6 +31,7 @@
     position: relative;
     margin: 0px 20px 0px 20px;
     margin-bottom: 70px;
+    z-index: 1;
 }
 
 .container #phone-home {
@@ -33,7 +39,30 @@
     background-size: 330px 630px;
 }
 
-/* -------- 휴대폰 상단 (노치, 배터리) --------*/
+/* ------------ 배터리 충전 선----------- */
+.phone-container #battery-charging {
+    position: absolute;
+    text-align: center;
+    font-size: 20px;
+    width: 30px;
+    height: 50px;
+    background-color: #ffffff;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border: 2.5px solid black;
+    padding-top: 10px;
+    bottom: 0px;
+    cursor: pointer;
+}
+.container::before {
+    content: '👈 충전 선을 클릭하면, 배터리가 100%로 충전됩니다.';
+    position: absolute;
+    bottom: 10px;
+    margin-left: 50px;
+    z-index: 1;
+}
+
+/* -------- 휴대폰 상단 (노치, 배터리) -------- */
 .phone .phone__top {
     width: 100%;
     height: 40px;
@@ -80,16 +109,18 @@
 }
 
 .phone__clock .phone__clock-time {
-    width: 200px;
+    width: 220px;
     margin-top: 7px;
     display: flex;
     justify-content: center;
     position: relative;
 }
+
 .phone__clock-time #phone__clock-time-value {
-    font-size: 60px;
+    font-size: 55px;
     font-weight: 800;
 }
+
 .phone__clock-time #phone__clock-time-second {
     font-size: 16px;
     position: absolute;
@@ -138,5 +169,6 @@
 
 /* ------ 휴대폰 충전 ------ */
 .battery {
-
+    width: 40px;
+    height: 100px;
 }
