--- a/study_3/style.css
+++ b/study_3/style.css
@@ -9,6 +9,28 @@
     align-items: center;
     justify-content: center;
 }
+.common-flex-spacebetween {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.common__top-battery {
+    width: 30px;
+    height: 19px;
+    background-color: black;
+    border-radius: 7px;
+    position: absolute;
+    right: 17px;
+}
+
+.common__top-battery-value {
+    font-size: 14px;
+    margin-top: 2px;
+    font-weight: 600;
+}
+/* ------------------------------- */
+
 
 .container {
     width: 100vw;
@@ -78,26 +100,18 @@
     border-radius: 20px;
 }
 
-.phone__top .fa-wifi {
+.phone__top-battery #phone__top-battery-value {
+    color: white;
+}
+
+
+.fa-wifi {
     font-size: 13px;
     position: absolute;
     right: 58px;
 }
 
-.phone__top .phone__top-battery {
-    width: 30px;
-    height: 19px;
-    background-color: black;
-    border-radius: 7px;
-    position: absolute;
-    right: 17px;
-}
 
-.phone__top-battery #phone__top-battery-value {
-    color: white;
-    font-size: 14px;
-    margin-top: 2px;
-}
 
 /* ------- 휴대폰 날짜 및 시간 표시 ------- */
 .phone .phone__clock {
@@ -142,9 +156,6 @@
 .phone__bottom .phone__bottom-icons {
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
 
 .phone__bottom-icons .phone__icon {
@@ -174,7 +185,20 @@
 /* -------------- 휴대폰 알람 설정 화면 ------------- */
 .container .alarm {
     background-color: black;
-
+    position: relative;
+}
+/* 배터리 0%되면 검정배경으로 알람화면을 덮음 */
+.alarm #alarm__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 48px;
+    background-color: black;
+    visibility: hidden;
+    transition: opacity 0.3s ease;
+    z-index: 99;
 }
 
 /* -------- 휴대폰 알람 설정 화면 상단 (시간, 와이파이 아이콘) -------- */
@@ -183,50 +207,55 @@
     height: 40px;
     padding: 0px 25px 0px 25px;
     color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    position: relative;
 }
 
 .alarm__top .alarm__top-time {
     font-size: 15px;
     font-weight: 600;
 }
-.alarm__top .fa-wifi {
-    font-size: 13px;
+
+.alarm__top .alarm__top-battery {
+    background-color: white;
 }
+
+.alarm__top-battery #alarm__top-battery-value {
+    color: black;
+}
+
+
 
 /* ---------- 알람 설정 하는 부분 ----------- */
 .alarm .alarm__setting {
     width: 100%;
-    height: 150px;
+    height: 120px;
     padding: 10px;
-    /* background-color: green; */
 }
+
 .alarm__setting .alarm__setting-text {
     font-size: 24px;
     font-weight: 600;
     color: white;
 }
+
 /* 알람 설정 - 시, 분, 초 입력 부분  */
 .alarm__setting .alarm__setting-time {
     width: 100%;
     height: 50px;
     margin-top: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* background-color: pink; */
 }
+
 .alarm__setting-time .alarm__setting-time-input {
     display: flex;
     align-items: center;
 }
-.alarm__setting-time-input span{
+
+.alarm__setting-time-input span {
     color: white;
     font-size: 15px;
     font-weight: 800;
 }
+
 .alarm__setting-time-input .alarm__input {
     width: 75px;
     height: 40px;
@@ -236,40 +265,107 @@
     text-align: center;
     cursor: pointer;
 }
+
 .alarm__setting-time-input .alarm__input:focus {
     outline: none;
     box-shadow: none;
-    border: 3px solid rgb(233,159,58);
+    border: 3px solid rgb(233, 159, 58);
 }
+
 /* 알람 설정 - 알람 추가 버튼  */
 .alarm__setting-time .alarm__setting-time-btn {
-    background-color: rgb(255, 255, 255,0);
+    background-color: rgb(255, 255, 255, 0);
     border: none;
     font-size: 29px;
-    color: rgb(233,159,58);
+    color: rgb(233, 159, 58);
     cursor: pointer;
+}
+
+/* 특별한 기능 없이 알람 페이지 디자인을 위해 추가된 div의 스타일 */
+.alarm .alarm__addDesign {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+}
+
+.alarm__addDesign .alarm__addDesign-text {
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+}
+
+.alarm__addDesign .alarm__addDesign-text i {
+    margin-right: 5px;
+}
+
+.alarm__addDesign .alarm__addDesign-box {
+    margin-top: 13px;
+}
+
+.alarm__addDesign .alarm__addDesign-box p {
+    font-size: 13px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.alarm__addDesign .alarm__addDesign-box button {
+    width: 42px;
+    height: 27px;
+    border-style: none;
+    border-radius: 13px;
+    background-color: rgb(255, 255, 255, 0.2);
+    color: rgb(233, 159, 58);
+    font-weight: 700;
 }
 
 /* ----------- 설정한 알림 리스트 ------------ */
 .alarm .alarm__list {
     width: 100%;
-    height: 400px;
-    /* background-color: blue; */
+    height: 300px;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.alarm__list .alarm__list-header {
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    margin-bottom: 15px;
+}
+
+/* 추가된 알람들을 보여주는 span태그 */
+.alarm .alarm__list span {
+    width: 100%;
+    height: 58px;
+    color: rgb(255, 255, 255);
+    font-size: 35px;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.alarm .alarm__list span::after {
+    content: '알람';
+    font-size: 13px;
+    color: rgb(255, 255, 255, 0.5);
+    bottom: 0px;
+    left: 0px;
+    position: absolute;
 }
 
 /* --------------- 알람 관련 경고창 ------------ */
 .phone-container #alarm__alert {
     width: 220px;
-    height:120px;
-    background-color: blue;
-    border-radius: 10px;
+    height: 115px;
+    background-color: rgb(255, 255, 255, 0.5);
+    border-radius: 16px;
     position: absolute;
     top: 250px;
     left: 0px;
     right: 0px;
     margin: 0 auto;
+    padding: 10px;
     z-index: 10;
-    display: none;
-
+    text-align: center;
+    line-height: 23px;
+    visibility: hidden;
 }
