--- a/study_3/calculator/calculator.css
+++ b/study_3/calculator/calculator.css
@@ -62,6 +62,37 @@
     font-size: 20px;
 }
 
-.calculator__btn .claculator__btn-zero {
+.calculator__btn .calculator__btn-zero {
     grid-column: span 2;
+}
+
+/* 연산 결과 표시  */
+.history {
+    width: 350px;
+    height: 200px;
+    background-color: #7d7db7;
+    margin-left: 20px;
+    padding: 15px;
+    border-radius: 10px;
+    flex-direction: column;
+    position: relative;
+}
+.history .history__header {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    font-size: 17px;
+    font-weight: 600;
+    color: white;
+}
+.history .history__text {
+    width: 100%;
+    height: 130px;
+    margin-top: 30px;
+}
+.history .history__text p {
+    font-size: 18px;
+    color: white;
+    margin-bottom: 5px;
+    letter-spacing: 1px;
 }
