--- a/study_4/todo/todo.css
+++ b/study_4/todo/todo.css
@@ -21,6 +21,7 @@
     height: 100vh;
     background-color: white;
     background-image: url('./assets/background-dot.webp');
+    position: relative;
 }
 
 /* 할일이 없을때만 표시되는 텍스트 */
@@ -28,7 +29,6 @@
     font-size: 16px;
     color: rgb(165, 165, 165);
     position: fixed;
-    /* display: block; */
 }
 
 /* 할일 추가 버튼 */
@@ -45,6 +45,7 @@
     font-size: 30px;
     transition: width 0.4s;
 }
+
 .container .container__todoAddBtn:hover {
     width: 170px;
 }
@@ -52,8 +53,92 @@
 /* 할일 추가 모달  */
 .modal {
     width: 500px;
-    height: 450px;
-    background-color: blue;
+    height: 200px;
+    background-color: rgb(213, 213, 235);
     display: none;
     z-index: 999;
+    border-radius: 15px;
+    position: relative;
+}
+
+.modal .close {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    border: none;
+    background-color: rgb(126, 128, 160);
+    color: white;
+    font-size: 17px;
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.modal .modal__inputBtn {
+    width: 90%;
+    height: 20px;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.modal__inputBtn #todo-input {
+    width: 350px;
+    height: 38px;
+    padding: 0px 5px 0px 5px;
+    border: none;
+    box-shadow: 2px 2px 4px rgb(0, 0, 0,0.2);
+    border-radius: 5px;
+}
+.modal__inputBtn #todo-input:focus {
+    outline: 2px solid rgb(120, 120, 120);
+}
+
+.modal__inputBtn #todo-btn {
+    width: 38px;
+    height: 38px;
+    border: none;
+    border-radius: 5px;
+    margin-left: 10px;
+    background-color: rgb(126, 128, 160);
+    color: white;
+    font-size: 17px;
+}
+
+/* 추가된 할일  */
+.todo {
+    width: 90%;
+    height: 80%;
+    position: absolute;
+    top: 40px;
+    flex-wrap: wrap;
+}
+
+.todo__card {
+    width: 300px;
+    height: 160px;
+    background-color: rgb(205, 208, 255);
+    margin: 10px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.todo__deleteBtn {
+    /* content: 'x'; */
+    width: 23px;
+    height: 23px;
+    background-color: white;
+    border-radius: 12px;
+    border: none;
+    text-align: center;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
 }
